# train-SAE

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: train-crosscoder.json  train.json
experimental/: 1100-train=1.00-test=0.53.pt  1700-train=1.00-test=1.00.pt  cc_first-addition.ipynb  cc_first-division.ipynb  cc_first-multiplication.ipynb  cc_first-sub.ipynb  cc_first.html  cc_first.ipynb  viz-division.ipynb  viz-multiplication.ipynb  viz-subtraction.ipynb  viz.ipynb  viz_smallest.ipynb
experimental/addition/: results_1.npy  results_minus_1.npy  results_minus_5.npy
experimental/division/: results_minus_1.npy
experimental/multiplication/: results_minus_1.npy
experimental/subtraction/: results_1.npy  results_minus_1.npy
tests/models/: test_esm2.py
train-sae/saes/: vanilla.py
train_sae/configs/: base.py  utils.py
train_sae/models/: esm2.py  model.py  transformer.py
train_sae/saes/: crosscoder.py  topk.py  vanilla.py
train_sae/train/: main.py  scheduler.py  tasks.py  train.py
train_sae/train/datasets/: fasta.py
